Added image tag to index.html file

--- a/VirLabDB/Elements/templates/index.html
+++ b/VirLabDB/Elements/templates/index.html
@@ -11,7 +11,7 @@
   <h1 id="prueba">Productos Disponibles para </h1>
   <ul>
       {% for pr in products %}
-      <li> <strong>Nombre:</strong> {{pr.name}} / <strong>Marca:</strong> {{pr.brand}} / <strong>Cantidad:</strong> {{quantity}} / </li>
+      <li> <strong>Nombre:</strong> {{pr.name}} / <strong>Marca:</strong> {{pr.brand}} / <strong>Imagen: </strong> <img src="{{pr.image.url}}" alt=""></li>
       {% endfor %}
   </ul>
 
