--- a/VirLabDB/Elements/templates/index.html
+++ b/VirLabDB/Elements/templates/index.html
@@ -1,18 +1,18 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
+  {% load staticfiles %}
   <meta charset="utf-8">
   <title>Home</title>
-   <link rel="stylesheet" href="{% static 'css/master.css' %}">
-   <script src="{% static 'js/main.js' %}" charset="utf-8"></script>
+  <link rel="stylesheet" href="{% static 'css/master.css' %}">
+  <script src="{% static 'js/main.js' %}" charset="utf-8"></script>
 </head>
 <body>
   <h1 id="prueba">Productos Disponibles para </h1>
   <ul>
-      {% for pr in products %}
-      <li> <strong>Nombre:</strong> {{pr.name}} / <strong>Marca:</strong> {{pr.brand}} / <strong>Imagen: </strong> <img src="{{pr.image.url}}" alt=""></li>
-      {% endfor %}
+    {% for pr in products %}
+    <li> <strong>Nombre:</strong> {{pr.name}} / <strong>Marca:</strong> {{pr.brand}} / <strong>Imagen: </strong> <img src="{{pr.image.url}}" alt=""></li>
+    {% endfor %}
   </ul>
 
 </body>
