--- a/VirLabDB/Elements/templates/productDetail.html
+++ b/VirLabDB/Elements/templates/productDetail.html
@@ -16,6 +16,6 @@
     </p>
     <img src="{{ product.image.url}}" alt="">
     <button type="button" name="Back"> <a href="/">Volver</a> </button>
-    <button type="button" name="Back" > <a href="/" id="res">Reservar</a> </button>
+    <button type="button" name="Reservar" id="res" > <a href="/">Reservar</a> </button>
   </body>
 </html>
