--- a/VirLabDB/Elements/templates/index.html
+++ b/VirLabDB/Elements/templates/index.html
@@ -3,8 +3,8 @@
 <head>
   {% load staticfiles %}
   <meta charset="utf-8">
-  <title>Home</title>
-  <link rel="stylesheet" href="{% static 'css/master.css' %}">
+  <title>Home as</title>
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
   <script src="{% static 'js/main.js' %}" charset="utf-8"></script>
 </head>
 <body>
