--- a/VirLabDB/Elements/static/css/mainTestStyle.css
+++ b/VirLabDB/Elements/static/css/mainTestStyle.css
@@ -96,8 +96,8 @@ h2#texto{
 }
 
 section#mainPhoto{
-  position: relative;
-  z-index: -1;
+  position: relative;;
+  z-index: -2;
   width: 100%;
   height: 700px;
   background-image: url("../images/Bird.jpg");
@@ -109,7 +109,7 @@ section#mainPhoto{
 section#bodyList{
 
   width: 100%;
-  height: 700px;
+  height: 1200px;
   background-color: white;
 }
 
