Changes in Frontend. Added title and animations

--- a/VirLabDB/Elements/templates/mainTest.html
+++ b/VirLabDB/Elements/templates/mainTest.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {% load staticfiles%}
+  {% load staticfiles %}
   <meta charset="utf-8">
   <title>Home Page - </title>
   <link rel="stylesheet" href="{% static 'css/mainTestStyle.css' %}">
+  <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="{% static 'js/mainTestScript.js'%}" charset="utf-8"></script>
+  <script src="{% static 'js/mainTestScriptss.js'%}" ></script>
 </head>
 <body>
   <header id ="menu">
-    <h1 id ="mainTitle">VirtualLabDB</h1>
-  </header>
-  <section id = "mainPhoto"></section>
-  <section id = "mainContainer">
-    <section id = "firstContainer">
-      <h2 id="texto">Lista de materiales</h2>
-    </section>
-    <section id = "bodyList">
+    <nav>
       <ul>
-        {% for pr in products%}
-        <li class="list">
-          <a class = "links" href="{% url 'product_detail' pr.pk %}">
-            <h1 class = "listText" id = "quantity">{{pr.quantity}}</h1>
-            <h2 class = "listText" id = "name">{{pr.name}}</h2>
-            <p class = "listText" id = "description">{{pr.description}}</p>
-          </a>
-        </li>
-        {% endfor %}
-      </ul>
-    </section>
+        <li id = "leftLogo">
+          <a href="http://colegionuevayork.edu.co/" target="_blank">
+          <img id = "Logo" src="{% static 'images/Logo.png'%}" alt="">
+        </a>
+      </li>
+    </ul>
+    <img id = "title" src="{% static 'images/Title.png'%}">
+    <ul>
+      <li id = "rightLogo">
+        <a href="http://colegionuevayork.edu.co/" target="_blank">
+        <img id = "Logo" src="{% static 'images/Icon.png'%}" alt="">
+      </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- <a id = "agregarElementos" href="{% url 'new_product'%}">Agregar Elementos</a> -->
+</header>
+<section id = "mainPhoto"></section>
+<section id = "mainContainer">
+  <section id = "firstContainer">
+    <h2 id="texto">Lista de materiales</h2>
   </section>
-  <section id = "footer"></section>
+  <section id = "bodyList">
+    <section id = "search"></section>
+    <ul id ="dinList">
+      {% for pr in products%}
+      <li class="list">
+        <a class = "links" href="{% url 'product_detail' pr.pk %}">
+          <h1 class = "listText" id = "quantity">{{pr.quantity}}</h1>
+          <h2 class = "listText" id = "name">{{pr.name}}</h2>
+          <p class = "listText" id = "description">{{pr.description}}</p>
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+  </section>
+</section>
+<section id = "footer"></section>
 </body>
 </html>
