--- a/VirLabDB/Elements/static/css/mainTestStyle.css
+++ b/VirLabDB/Elements/static/css/mainTestStyle.css
@@ -12,13 +12,43 @@ li{
   display: block;
 }
 
+a#agregarElementos{
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  position: relative;
+  text-align: center;
+  font-size: 1.3em;
+  font-style: italic;
+  float: right;
+  margin-top: -70px;
+  margin-right: 0px;
+  background-color: rgb(215, 58, 58);
+  padding: 20px;
+  height: 100%;
+  margin-bottom: -70px;
+
+}
+
+img#Logo{
+  width: 53px;
+
+  position: center;
+  display: inline-block;
+  float: left;
+  padding: 7px;
+  margin-bottom: 10px;
+  margin-left: 30px;
+  margin-right: -100px;
+}
+
 h1#quantity{
   font-size: 2em;
   border-radius: 20px;
   background-color: rgb(224, 79, 79);
-  padding: 10px;
+  padding: 20px;
   color: rgb(250, 250, 250);
-  width: 40px;
+  width: 50px;
   float: left;
   margin-right: 15px;
   text-align: center;
@@ -30,10 +60,40 @@ h1#quantity{
 }
 
 h2#name{
-  font-size: 3em;
+  font-size: 2.5em;
   display: inline-block;
   margin-top: -20px;
   margin-bottom: -70px;
+
+}
+
+li#leftLogo{
+  margin-top: -17px;
+  display: inline-block;
+  margin-left: -400px;
+  float: left;
+}
+
+li#rightLogo{
+  margin-top: -15px;
+  float: right;
+  display: inline-block;
+  margin-right: -285px;
+}
+
+ul#dinList{
+  margin-top: -120px;
+}
+
+section#search{
+  height: 100px;
+  width: 200px;
+  background-color: rgb(215, 58, 58);
+  display: inline-block;
+  margin-left:849px;
+  z-index: 1;
+  float: right;
+  position: static;;
 
 
 }
@@ -62,16 +122,62 @@ header#menu{
   background-color: rgb(249, 249, 249);
   font-family: BebasNeue;
 
+  display: inline;
+  box-shadow: 3px 0px 15px black;
+
 }
 
 img#logo{
   width: 20px;
+  display: inline-block;
+  margin-right: 200px;
+  padding-right: 200px;
+  float: left;
+}
+
+ul li{
+  float: left;
+  margin: 10px;
+  padding: 2px;
+  font-family: Montserrat;
+  font-size: 1.5em;
+}
+
+img#title{
+  width: 450px;
+  height: 100px;
+  float: left;
+  margin-right: 30px;
+  margin-top: 300px;
+  -webkit-transition: width .5s, height .5s, margin-right .5s, margin-top .5s;
+}
+
+nav{
+  display: table;
+  margin: auto;
+  margin-top: 15px;
+  background-color: transparent;
+  position: static;;
+  z-index: 200px;
+
+  -webkit-transition: margin-left .5s;
+}
+
+ul{
+  display: block;
+  float: left;
+  list-style: none;
 }
 
 h1#mainTitle{
   position: center;
   text-align: center;
   margin: 15px;
+  font-family: Montserrat;
+  font-weight: 200;
+  margin-top: 270px;
+  background-color: inherit;
+  width: 500px;
 }
 
 section#firstContainer{
@@ -109,7 +215,7 @@ section#mainPhoto{
 section#bodyList{
 
   width: 100%;
-  height: 1200px;
+  height: 2200px;
   background-color: white;
 }
 
