--- a/VirLabDB/Elements/templates/mainTest.html
+++ b/VirLabDB/Elements/templates/mainTest.html
@@ -3,11 +3,15 @@
 <head>
   {% load staticfiles %}
   <meta charset="utf-8">
-  <title>Home Page - </title>
+  <title>Virtual Laboratry Data Base App</title>
+
   <link rel="stylesheet" href="{% static 'css/mainTestStyle.css' %}">
   <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="shortcut icon" href="http://colegionuevayork.edu.co/wp-content/uploads/2016/04/favicon-colegio-nueva-york.png" />
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="{% static 'js/mainTestScriptss.js'%}" ></script>
+
 </head>
 <body>
   <header id ="menu">
@@ -15,41 +19,47 @@
       <ul>
         <li id = "leftLogo">
           <a href="http://colegionuevayork.edu.co/" target="_blank">
-          <img id = "Logo" src="{% static 'images/Logo.png'%}" alt="">
-        </a>
-      </li>
-    </ul>
-    <img id = "title" src="{% static 'images/Title.png'%}">
-    <ul>
-      <li id = "rightLogo">
-        <a href="http://colegionuevayork.edu.co/" target="_blank">
-        <img id = "Logo" src="{% static 'images/Icon.png'%}" alt="">
-      </a>
-      </li>
-    </ul>
-  </nav>
-  <!-- <a id = "agregarElementos" href="{% url 'new_product'%}">Agregar Elementos</a> -->
-</header>
-<section id = "mainPhoto"></section>
-<section id = "mainContainer">
-  <section id = "firstContainer">
-    <h2 id="texto">Lista de materiales</h2>
+            <img id = "Logo" src="{% static 'images/Logo.png'%}" alt="">
+          </a>
+        </li>
+      </ul>
+      <img id = "title" src="{% static 'images/Title.png'%}">
+      <ul>
+        <li id = "rightLogo">
+          <a href="http://colegionuevayork.edu.co/" target="_blank">
+            <img id = "Logo" src="{% static 'images/Icon.png'%}" alt="">
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- <a id = "agregarElementos" href="{% url 'new_product'%}">Agregar Elementos</a> -->
+  </header>
+  <section id = "mainPhoto"> </section>
+  <section id ="scrollText">
+    <h2>Desliza</h2>
+    <h2 id ="scrollSign"><</h2>
   </section>
-  <section id = "bodyList">
-    <section id = "search"></section>
-    <ul id ="dinList">
-      {% for pr in products%}
-      <li class="list">
-        <a class = "links" href="{% url 'product_detail' pr.pk %}">
-          <h1 class = "listText" id = "quantity">{{pr.quantity}}</h1>
-          <h2 class = "listText" id = "name">{{pr.name}}</h2>
-          <p class = "listText" id = "description">{{pr.description}}</p>
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
+  <section id = "mainContainer">
+    <section id = "firstContainer">
+      <h2 id="texto">Lista de materiales</h2>
+    </section>
+    <section id = "bodyList">
+      <section id = "search"></section>
+      <section id = "category"></section>
+      <section id = "request"></section>
+      <ul id ="dinList">
+        {% for pr in products%}
+        <li class="list">
+          <a class = "links" href="{% url 'product_detail' pr.pk %}">
+            <h1 class = "listText" id = "quantity">{{pr.quantity}}</h1>
+            <h2 class = "listText" id = "name">{{pr.name}}</h2>
+            <p class = "listText" id = "description">{{pr.description}}</p>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </section>
   </section>
-</section>
-<section id = "footer"></section>
+  <section id = "footer"></section>
 </body>
 </html>
