--- a/VirLabDB/Elements/templates/productDetail.html
+++ b/VirLabDB/Elements/templates/productDetail.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      {% load staticfiles %}
-    <meta charset="utf-8">
-    <title> {{product.name }}</title>
-    <link rel="stylesheet" href="{% static 'css/productDetail.css' %}">
-    <script src="{% static 'js/productDetail.js' %}" charset="utf-8"></script>
-  </head>
-  <body>
+<head>
+  {% load staticfiles %}
+  <meta charset="utf-8">
+  <title> {{product.name }}</title>
+  <link rel="stylesheet" href="{% static 'css/productDetail.css' %}">
+  <script src="{% static 'js/productDetail.js' %}" charset="utf-8"></script>
+</head>
+<body>
+  <section id = "mainContainer">
     <h1> {{product.name}} </h1>
     <h2> {{product.description}}</h2>
     <p>
@@ -16,6 +17,7 @@
     </p>
     <img src="{{ product.image.url}}" alt="">
     <button type="button" name="Back"> <a href="/">Volver</a> </button>
-    <button type="button" name="Reservar" id="res" > <a href="/">Reservar</a> </button>
-  </body>
+    <button type="button" name="Reservar" id="res" onclick="reservar" > <a href="/">Reservar</a> </button>
+  </section>
+</body>
 </html>
